// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getDefaultNetworkHelpers all default 1`] = `
Object {
  "getToken": [Function],
  "handleError": [Function],
  "handleStatusCode": [Function],
  "requestDELETE": [Function],
  "requestGET": [Function],
  "requestPATCH": [Function],
  "requestPOST": [Function],
  "requestPUT": [Function],
}
`;

exports[`getDefaultNetworkHelpers custom getToken 1`] = `
Object {
  "getToken": [Function],
  "handleError": [Function],
  "handleStatusCode": [Function],
  "requestDELETE": [Function],
  "requestGET": [Function],
  "requestPATCH": [Function],
  "requestPOST": [Function],
  "requestPUT": [Function],
}
`;

exports[`requestDELETE all default 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json",
    "Authorization": "Bearer token",
  },
  "method": "DELETE",
}
`;

exports[`requestDELETE custom getToken 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json",
  },
  "method": "DELETE",
}
`;

exports[`requestGET all default 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json",
    "Authorization": "Bearer token",
  },
  "method": "GET",
}
`;

exports[`requestGET custom getToken 1`] = `
Object {
  "headers": Object {
    "Accept": "application/json",
  },
  "method": "GET",
}
`;

exports[`requestPATCH all default 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Authorization": "Bearer token",
    "Content-Type": "application/json",
  },
  "method": "PATCH",
}
`;

exports[`requestPATCH custom getToken 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/json",
  },
  "method": "PATCH",
}
`;

exports[`requestPOST all default 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Authorization": "Bearer token",
    "Content-Type": "application/json",
  },
  "method": "POST",
}
`;

exports[`requestPOST custom getToken 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/json",
  },
  "method": "POST",
}
`;

exports[`requestPUT all default 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Authorization": "Bearer token",
    "Content-Type": "application/json",
  },
  "method": "PUT",
}
`;

exports[`requestPUT custom getToken 1`] = `
Object {
  "body": undefined,
  "headers": Object {
    "Accept": "application/json",
    "Content-Type": "application/json",
  },
  "method": "PUT",
}
`;
